--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <html lang="en-US">
 <head>
     <script src="js/websiteBrowserCheck.js"></script>
-
+    <meta name="facebook-domain-verification" content="v1s17b0o3dinmns0le93si89lm5azl" />
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
